2_routing_headers/deployment/virtual-service-subset-v10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf1-vs
spec:
  hosts:
    - "*"
  gateways:
    - leaf1-gateway
  http:
    - match:
        - uri:
            prefix: /leaf1
      route:
        - destination:
            host: leaf1
            subset: v10
